# SyncBeats

./: CMakeLists.txt
app/src/: main.c
hal/include/hal/: ble.h  spi.h  system.h  uart.h
hal/src/: ble.c  spi.c  system.c  uart.c
master/: CMakeLists.txt
master/app/: CMakeLists.txt
master/app/src/: main.c
master/hal/: CMakeLists.txt
master/hal/include/hal/: bluetooth.h  joystick_control.h  musicPlayer.h  network.h  pot_pwm.h  text_to_speech.h  util.h
master/hal/src/: bluetooth.c  joystic_control.c  musicPlayer.c  network.c  pot_pwm.c  text_to_speech.c  uart.c  util.c
master/project-server/lib/: udp_server.js
master/project-server/public/: index.html
master/project-server/public/javascripts/: udp_ui.js
master/project-server/public/stylesheets/: style.css
slave/app/: CMakeLists.txt
slave/app/src/: main.c
slave/hal/include/hal/: bluetooth.h  uart.h
slave/hal/src/: bluetooth.c  uart.c
